--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       <div id="score-pallet" class="w-75 d-flex justify-content-left flex-wrap"></div>
     </div>
 
+    <div class="d-flex justify-content-center mt-2">
+      <button type="button" id="btn-reset-coins" class="btn btn-warning btn-sm">コインをリセット</button>
+    </div>
+
     <!-- howler.jsの読み込み -->
     <script src="howler.min.js"></script>
 
