index.htmlの言語を日本語に変更し、SEO対策としてタイトル、メタディスクリプション、キーワード、OGP、Twitter Cardのメタタグを追加。README.mdを更新し、対象学年を小学3〜5年生に変更。

--- a/index.html
+++ b/index.html
@@ -1,9 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>かけ算の筆算</title>
+
+    <!-- SEO対策: タイトル -->
+    <title>かけ算の筆算練習アプリ | 小学生向け無料学習ツール</title>
+
+    <!-- SEO対策: メタディスクリプション -->
+    <meta name="description" content="小学3〜5年生向けのかけ算の筆算を楽しく学べる無料Webアプリ。ドラッグ&ドロップで直感的に操作でき、正解するとコインが貯まるゲーミフィケーション要素で学習意欲を高めます。10種類の問題モード、ヒント機能、タブレット最適化対応。" />
+
+    <!-- SEO対策: キーワード -->
+    <meta name="keywords" content="かけ算,筆算,小学生,算数,学習アプリ,無料,教育,ドリル,練習問題,小数,掛け算,オンライン学習,タブレット学習,自主学習,宿題サポート,2桁×2桁,3桁×2桁" />
+
+    <!-- SEO対策: 著者 -->
+    <meta name="author" content="Jimitas" />
+
+    <!-- SEO対策: 言語 -->
+    <meta http-equiv="content-language" content="ja" />
+
+    <!-- OGP対策: Facebook等のSNSシェア用 -->
+    <!-- Netlify (https://kakezan-hissan.netlify.app/) をメインURLとして使用 -->
+    <meta property="og:title" content="かけ算の筆算練習アプリ | 小学生向け無料学習ツール" />
+    <meta property="og:description" content="小学3〜5年生向けのかけ算の筆算を楽しく学べる無料Webアプリ。ドラッグ&ドロップで直感的に操作、コインが貯まるゲーミフィケーション要素で楽しく学習。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://kakezan-hissan.netlify.app/images/kake-hissan.png" />
+    <meta property="og:site_name" content="かけ算の筆算練習アプリ" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <!-- Twitter Card対策 -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="かけ算の筆算練習アプリ | 小学生向け無料学習ツール" />
+    <meta name="twitter:description" content="小学3〜5年生向けのかけ算の筆算を楽しく学べる無料Webアプリ。" />
+    <meta name="twitter:image" content="https://kakezan-hissan.netlify.app/images/kake-hissan.png" />
+
+    <!-- Canonical URL: Netlifyと併用する場合は、好みのURLに変更してください -->
+    <link rel="canonical" href="https://kakezan-hissan.netlify.app/" />
+
+    <!-- モバイル対応 -->
+    <meta name="theme-color" content="#0d6efd" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="かけ算の筆算" />
+
+    <!-- ロボット対策 -->
+    <meta name="robots" content="index, follow" />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
